# standup

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: flutter-tests.yml  frappe-tests.yml
app/: .gitignore  pubspec.yaml
app/lib/: main.dart
app/lib/screens/: home_screen.dart  login_screen.dart
app/lib/services/: auth_service.dart  frappe_api_service.dart
app/standup/: README.md  pubspec.yaml
app/standup/android/app/: build.gradle.kts
app/standup/ios/Runner/: Info.plist
app/standup/ios/Runner.xcodeproj/: project.pbxproj
app/standup/lib/: app.dart  main.dart
app/standup/lib/core/constants/: app_strings.dart
app/standup/lib/core/theme/: app_colors.dart  app_theme.dart
app/standup/lib/data/mock/: mock_data.dart
app/standup/lib/data/models/: achievement_model.dart  attachment_model.dart  checklist_item_model.dart  comment_model.dart  event_model.dart  holiday_model.dart  leaderboard_model.dart  leave_model.dart  meeting_model.dart  notification_model.dart  pantry_catalog_item.dart  snack_request_model.dart  task_model.dart  time_log_model.dart  user_model.dart
app/standup/lib/shared/providers/: navigation_provider.dart
app/standup/lib/shared/widgets/: app_scaffold.dart  notification_bell.dart  pantry_scaffold.dart
app/standup/linux/: CMakeLists.txt
app/standup/linux/runner/: my_application.cc
app/standup/macos/Runner.xcodeproj/: project.pbxproj
app/standup/macos/Runner/Configs/: AppInfo.xcconfig
app/standup/test/: widget_test.dart
app/standup/web/: index.html  manifest.json
app/standup/windows/: CMakeLists.txt
app/standup/windows/runner/: Runner.rc  main.cpp
app/test/: frappe_api_service_test.dart
standup/: .gitignore  hooks.py  patches.txt
standup/api/: auth.py
standup/config/: desktop.py
(+49 files in other folders)
